--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   cupertino_icons: ^1.0.8
   uuid: ^4.5.1
   intl: ^0.20.2
+  http: ^1.5.0
+  flutter_dotenv: ^6.0.0
+  flutter_secure_storage: ^9.2.4
+  provider: ^6.1.5+1
+  dio: ^5.7.0
+  diacritic: ^0.1.6
 
 
 dev_dependencies:
@@ -60,12 +66,14 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
+  assets:
+    - lib/assets/animations/Welcum.json
+    - lib/assets/animations/success.json
+    - lib/assets/animations/done.json
+    - lib/assets/animations/hi.json
+    - lib/assets/animations/goshh.json
+    - lib/assets/animations/pamkin.json
 
-  # assets:
-  #   - assets/animations/hi.json
-  #   - assets/animations/done.json
-  #   - assets/animations/success.json
-    # agrega todas las animaciones/imágenes que uses
 
   # To add assets to your application, add an assets section, like this:
   # assets:
